force-app/main/default/objects/SecOps_Schedule_Config__c/SecOps_Schedule_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Continuous-mode scheduling configuration.</description>
    <label>SecOps Schedule Config</label>
</CustomObject>