force-app/main/default/objects/SecOps_Schedule_Config__c/fields/Baseline_Refresh_Day__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Refresh_Day__c</fullName>
    <description>Day of week to refresh baselines (continuous mode). Expected values: Sunday..Saturday. Custom Settings do not support picklists; enforce allowed values in Apex/Flow.</description>
    <label>Baseline Refresh Day</label>
    <length>10</length>
    <type>Text</type>
</CustomField>