force-app/main/default/objects/SecOps_Schedule_Config__c/fields/Baseline_Refresh_Hour__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Refresh_Hour__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Hour of day (0-23) to run weekly baseline refresh.</description>
    <label>Baseline Refresh Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>