force-app/main/default/objects/SecOps_Schedule_Config__c/fields/Cadence_Hours__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Hours__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Interval in hours between continuous scan runs.</description>
    <label>Cadence Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>