force-app/main/default/objects/SecOps_Schedule_Config__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master switch for continuous SecOps scheduling.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>